<resources>
    <string name="app_name">PARCIAL_DAM_CCOMPI_GUERRERO_21101034</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Johanna Doe</string>
    <string name="nav_header_subtitle">admin@travelapp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_presupuesto">Presupuesto</string>">
    <string name="menu_seguros">Seguros</string>
    <string name="menu_hoteles">Hoteles</string>

    <string name="tvSignIn">Sign In</string>
    <string name="tvEmail">Email</string>
    <string name="hintEmail">Ingrese email</string>
    <string name="tvPass">Password</string>
    <string name="hintPass">Ingrese password</string>
    <string name="btnSign">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvPresupuesto">Presupuesto</string>
    <string name="chkPrivacy">I agree to the Terms of Services and
        Privacy Policy</string>
    <string name="etVuelo">Costo del Vuelo en USD</string>
    <string name="etAloja">Costo de Alojamiento por noche USD</string>
    <string name="cantNoches">Cantidad de noches</string>
    <string name="hinComida">Costo diario de comida en USD</string>
    <string name="btnCalcular">Calcular</string>
    <string name="tvPres">El presupuesto total es:</string>
</resources>